--- a/site/styles.css
+++ b/site/styles.css
@@ -56,3 +56,15 @@ h1 {
     text-align: center;
     font-size: 30px;
 }
+
+#cabeca{
+    border-width: 5px;
+    border-style: solid;
+    border-color: #523312;
+    border-radius: 35px;
+    padding: 20px;
+    background-color: #86EB97;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 70px;
+}
